Fix alignment for hamburger icon

--- a/src/theme/_header.scss
+++ b/src/theme/_header.scss
@@ -20,6 +20,9 @@
       flex-grow: 2;
       align-self: center;
       justify-content: center;
+      @media only screen and (max-width: $largest-mobile-screen) {
+        justify-content: flex-end;
+      }
 
       .desktop.menu {
         display: flex;
